# libcouchbase.hs

./: .gitignore  LICENSE  README.md  libcouchbase.cabal
include/libcouchbase/: configuration.h
src/Couchbase/: Raw.chs
test/: tests.hs
