name:                libcouchbase
version:             0.1.0.0
synopsis:            Haskell binding for libcouchbase.
homepage:            https://github.com/asvyazin/libcouchbase.hs
license:             BSD3
license-file:        LICENSE
author:              Alexander Svyazin
maintainer:          guybrush@live.ru
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Couchbase.Raw
  build-depends:       base >=4.8 && <4.9,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         c2hs -any
  CC-options:          -Wall -pedantic
  Include-Dirs:        include
  GHC-options:         -Wall
  extra-libraries:     libcouchbase

test-suite test
  default-language: Haskell2010
  build-depends:       base,
                       bytestring,
                       hspec,
                       libcouchbase
  hs-source-dirs:      test
  main-is:             tests.hs
  type:                exitcode-stdio-1.0
